# rssfixer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  development.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: coverage.yml  dev-tools.yml  guarddog.yml  linter.yml  markdown-code-runner.yml  pypi-publish.yml  python-publish.yml
example/: nccgroup.xml
resources/: bandit.json  coverage.txt
src/rssfixer/: __init__.py  cli.py  exceptions.py  feed.py  models.py  rss.py  utils.py
src/rssfixer/extractors/: __init__.py  base.py  html.py  json.py  list.py  release.py
src/tests/: test_rss.py  test_rss_.py  test_rss_args.py  test_rss_extract_links_release.py  test_rss_main.py
src/tests/data/input/: apple.html  nccgroup.html  sqlite.html  tripwire.html  truesec.html
src/tests/data/output/: apple  apple.xml  nccgroup  nccgroup.xml  sqlite  sqlite.xml  tripwire  tripwire.xml  tripwire_no_description  truesec  truesec.xml  truesec_no_desc
tests/: test_rss_.py
