[project]
name = "rssfixer"
authors = [
  { name="Peter Reuterås", email="peter@reuteras.net" },
]
description = "Generate RSS feed for Wordpress blog without it."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Information Technology",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/reuteras/rssfixer"
"Bug Tracker" = "https://github.com/reuteras/rssfixer/issues"

[tool.poetry.scripts]
rssfixer = "rssfixer:main"

[tool.ruff]
lint.select = [
  "BLE",  # flake8-blind-except
  "C4",   # flake8-comprehensions
  "COM",  # flake8-commas
  "D",    # pydocstyle
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "ISC",  # flake8-implicit-str-concat
  "N",    # pep8-naming
  "PL",   # Pylint
  "RUF",  # Ruff-specific rules
  "S",    # flake8-bandit
  "UP",   # pyupgrade
  "W",    # Warning
]
lint.ignore = [
  "D203", # one-blank-line-before-class
  "D213", # multi-line-summary-second-line
  "S101", # Use of `assert` detected
  "S301", # `pickle` and modules that wrap it can be unsafe when used to deserialize untrusted data, possible security issue
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
lint.exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    ".venv",
]

# Same as Black.
line-length = 120

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
[tool.poetry]
name = "rssfixer"
version = "0.2.13"
description = "Generate RSS for blogs without a feed."
authors = ["Peter Reuterås <peter@reuteras.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = ">=4.12.3"
feedgen = "0.9.0"
requests = ">=2.32.3"
docutils = ">=0.21.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bandit = "*"
build = "*"
twine = "*"
black = "*"
ruff = "*"
pytest = "*"
requests-mock = "*"
coverage = "*"
pre-commit = "*"
gitpython = ">=3.1.35"

[tool.poetry.group.github]
optional = true

[tool.poetry.group.github.dependencies]
coverage-badge = "*"
markdown-code-runner = "*"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
