[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.select = [
  "BLE",  # flake8-blind-except
  "C4",   # flake8-comprehensions
  "COM",  # flake8-commas
  "D",    # pydocstyle
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "ISC",  # flake8-implicit-str-concat
  "N",    # pep8-naming
  "PL",   # Pylint
  "RUF",  # Ruff-specific rules
  "S",    # flake8-bandit (security)
  "UP",   # pyupgrade
  "W",    # Warning
]
lint.ignore = [
  "D203", # one-blank-line-before-class
  "D213", # multi-line-summary-second-line
  "S101", # Use of `assert` detected
  "S301", # `pickle` and modules that wrap it can be unsafe when used to deserialize untrusted data, possible security issue
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
lint.exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    ".venv",
]

# Enable formatting
format.quote-style = "double"
format.indent-style = "space"
format.line-ending = "auto"

# Target Python 3.11
target-version = "py311"

# Line length for both linting and formatting
line-length = 120

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
[project]
name = "rssfixer"
version = "0.2.18"
description = "Generate RSS for blogs without a feed."
authors = [{name = "Peter Reuterås", email = "peter@reuteras.net"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Information Technology",
    "Development Status :: 7 - Inactive",
    "Environment :: Console",
]

dependencies = [
    "beautifulsoup4>=4.12.3",
    "feedgen==1.0.0",
    "requests>=2.32.3",
]

[project.scripts]
rssfixer = "rssfixer:main"

[project.urls]
Homepage = "https://github.com/reuteras/rssfixer"
"Bug Tracker" = "https://github.com/reuteras/rssfixer/issues"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "requests-mock>=1.12.1",
    "ruff>=0.12.11",
    "markdown-code-runner",
]
